--- a/index.html
+++ b/index.html
@@ -29,51 +29,143 @@
         <a href="#contact">Contact</a>
     </nav>
 
-    <section id="about">
+    <section id="about" class="section-container clearfix">
         <div class="column">
           <h3 class="font-weight-light">Who am I ?</h3>
           <span class="line"></span>
           <h5 class="mb-3">A Career Changer Transitioning To Web Developer / Data Engineer Based In London</h5>
           <p class="mt-20">
-            "When I dhakxmbxxxxxxxxxxxxxx"
+            "At my previous job, I unearthed my fascination with tech. After completing a data science bootcamp and data engineering training, my passion for web development emerged through hands-on projects. Now, I'm pursuing a career as a web developer."
           </p>
         </div>
-        <div class="column">Personal Info</div>
-        <div class="column">My Expertise</div>
+        <div class="column">
+          <h3 class="font-weight-light">Personal Info</h3>
+            <ul class="person-info">
+              <li>
+                <span>Birthdate</span>
+                 : 13/02/1994
+              </li>
+              <li>
+                <span>Email</span>
+                 : hzh0608@hotmail.com
+              </li>
+              <li>
+                <span>Phone</span>
+                 : 07774 194634
+              </li>
+              <li>
+                <span>Address</span>
+                 : 37A Netherhall Gardens, NW3 5RL, London
+              </li>
+            </ul>
+          <span class="line"></span>
+        </div>
     </section>
 
-    <section id="resume">
+    <section id="resume" class="section-container clearfix">
+      <div class="box">
+
+        <div class="row">
+            <div class="column half">
+                <h3 class="font-weight-light">Experience</h3>
+                <span class="line"></span>
+                <div>
+                  <h6 class="period">04/2023 - 06/2023</h6>
+                  <p class="job-title">Trainee Data Engineer  @Sparta Global London</p>
+                  <p>
+                    Completed intensive training encompassing AGILE & SCRUM methodologies,
+                    Python programming, SQL Server, Docker, MongoDB,Test-Driven Development (TDD),
+                    Pyspark, Databricks, ETL pipeline design, and cloud technologies including GCP (Google Cloud Platform) and AWS (Amazon Web Services).
+                  </p>
+                </div>
+                <div>
+                  <h6 class="period">04/2021 - 07/2022</h6>
+                  <p class="job-title">Chatbots Conversational Analyst  @Huawei Dusseldorf</p>
+                  <ul>
+                    <li>
+                      <p>Conducted thorough data analysis to identify opportunities for enhancing conversational flows,
+                       utilizing user insights to drive optimization strategies.</p>
+                    </li>
+                    <li>
+                      <p>Collaborated closely with stakeholders from various departments to implement
+                        improvements in conversational interfaces.</p>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+
+            <div class="column half">
+                <h3 class="font-weight-light">Education</h3>
+                <span class="line"></span>
+                <!-- Education entries here -->
+            </div>
+        </div> <!-- End of Experience and Education row -->
         <div class="column">
-            <h3>Experience</h3>
-            <div>Job 1</div>
-            <div>Job 2</div>
-            <div>Job 3</div>
+            <h3 class="font-weight-light">Experience</h3>
+            <span class="line"></span>
+
         </div>
         <div class="column">
-            <h3>Education</h3>
-            <div>Education 1</div>
-            <div>Education 2</div>
-            <div>Education 3</div>
+            <h3 class="font-weight-light" >Education</h3>
+            <span class="line"></span>
+            <div>
+              <h6 class="period">10/2022 - 12/2023</h6>
+              <p class="job-title">Data Science</p>
+              <p>Le Wagon @London, UK</p>
+            </div>
+            <div>
+              <h6 class="period">04/2017 - 02/2021</h6>
+              <p class="job-title">M.A. in Germanic Literatures and Linguistics</p>
+              <p>Heinrich Heine University Dusseldorf @Dusseldorf, Germany</p>
+            </div>
+            <div>
+              <h6 class="period">09/2012 - 06/2016</h6>
+              <p class="job-title">B.A. in German Language and Literature</p>
+              <p>Wuhan University @Wuhan, China</p>
+            </div>
         </div>
         <div class="column">
-            <h3>Skills</h3>
-            <div class="progress-bar">Skill 1</div>
-            <div class="progress-bar">Skill 2</div>
-            <div class="progress-bar">Skill 3</div>
+            <h3 class="font-weight-light" >Skills</h3>
+            <span class="line"></span>
+            <div class="card">
+              <h6>Python</h6>
+              <div class="progress-bar" style="width:65%;">65%</div>
+              <h6>SQL</h6>
+              <div class="progress-bar" style="width:65%;">65%</div>
+              <h6>JavaScript</h6>
+              <div class="progress-bar" style="width:55%;">55%</div>
+              <h6>HTML5 & CSS3</h6>
+              <div class="progress-bar" style="width:45%;">45%</div>
+          </div>
         </div>
+        <div class="column">
+          <h3 class="font-weight-light" >Languages</h3>
+          <span class="line"></span>
+          <div class="card">
+            <h6>English</h6>
+            <div class="progress-bar" style="width:80%;">Proficient in speaking and writing</div>
+            <h6>Mandarin</h6>
+            <div class="progress-bar" style="width:95%;">Native</div>
+            <h6>German</h6>
+            <div class="progress-bar" style="width:70%;">Proficient in speaking and writing</div>
+            <h6>Cantonese</h6>
+            <div class="progress-bar" style="width:60%;">Professional working proficiency</div>
+        </div>
+      </div>
     </section>
 
-    <section id="contact">
-        <p>Phone Number: </p>
-        <p>Address: </p>
-        <p>Email: </p>
-        <!-- <div class="social-icons">
-            <a href="#" target="_blank" class="facebook">Facebook</a>
-            <a href="#" target="_blank" class="instagram">Instagram</a>
-            <a href="#" target="_blank" class="github">Github</a>
-        </div> -->
+    <section id="contact" class="section-container clearfix">
+      <i class="fa-solid fa-phone"></i>
+      <p>Phone Number: 07774 194634</p>
+      <i class="fa-solid fa-location-dot"></i>
+      <p>Address: 37A Netherhall Gardens, London</p>
+      <i class="fa-regular fa-envelope"></i>
+      <p>Email: hzh0608@hotmail.com</p>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/vikihuh/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/sailormoonvicky" target="_blank" class="github"><i class="fab fa-github"></i></a>
+    </div>
     </section>
-
-    <script src="scripts.js"></script>
 </body>
 </html>
