skills bar need to be modified

--- a/index.html
+++ b/index.html
@@ -64,49 +64,37 @@
 
     <section id="resume" class="section-container clearfix">
       <div class="box">
-
         <div class="row">
-            <div class="column half">
-                <h3 class="font-weight-light">Experience</h3>
-                <span class="line"></span>
-                <div>
-                  <h6 class="period">04/2023 - 06/2023</h6>
-                  <p class="job-title">Trainee Data Engineer  @Sparta Global London</p>
-                  <p>
-                    Completed intensive training encompassing AGILE & SCRUM methodologies,
-                    Python programming, SQL Server, Docker, MongoDB,Test-Driven Development (TDD),
-                    Pyspark, Databricks, ETL pipeline design, and cloud technologies including GCP (Google Cloud Platform) and AWS (Amazon Web Services).
-                  </p>
-                </div>
-                <div>
-                  <h6 class="period">04/2021 - 07/2022</h6>
-                  <p class="job-title">Chatbots Conversational Analyst  @Huawei Dusseldorf</p>
-                  <ul>
-                    <li>
-                      <p>Conducted thorough data analysis to identify opportunities for enhancing conversational flows,
-                       utilizing user insights to drive optimization strategies.</p>
-                    </li>
-                    <li>
-                      <p>Collaborated closely with stakeholders from various departments to implement
-                        improvements in conversational interfaces.</p>
-                    </li>
-                  </ul>
-                </div>
-            </div>
-
-            <div class="column half">
-                <h3 class="font-weight-light">Education</h3>
-                <span class="line"></span>
-                <!-- Education entries here -->
-            </div>
-        </div> <!-- End of Experience and Education row -->
-        <div class="column">
+          <div class="column half">
             <h3 class="font-weight-light">Experience</h3>
             <span class="line"></span>
+            <div>
+              <h6 class="period">04/2023 - 06/2023</h6>
+              <p class="job-title">Trainee Data Engineer  @Sparta Global London</p>
+              <p>
+                Completed intensive training encompassing AGILE & SCRUM methodologies,
+                Python programming, SQL Server, Docker, MongoDB,Test-Driven Development (TDD),
+                Pyspark, Databricks, ETL pipeline design, and cloud technologies including GCP (Google Cloud Platform) and AWS (Amazon Web Services).
+              </p>
+            </div>
+            <div>
+              <h6 class="period">04/2021 - 07/2022</h6>
+              <p class="job-title">Chatbots Conversational Analyst  @Huawei Dusseldorf</p>
+              <ul>
+                <li>
+                  <p>Conducted thorough data analysis to identify opportunities for enhancing conversational flows,
+                    utilizing user insights to drive optimization strategies.</p>
+                </li>
+                <li>
+                  <p>Collaborated closely with stakeholders from various departments to implement
+                    improvements in conversational interfaces.</p>
+                </li>
+              </ul>
+            </div>
+          </div>
 
-        </div>
-        <div class="column">
-            <h3 class="font-weight-light" >Education</h3>
+          <div class="column half">
+            <h3 class="font-weight-light">Education</h3>
             <span class="line"></span>
             <div>
               <h6 class="period">10/2022 - 12/2023</h6>
@@ -123,9 +111,12 @@
               <p class="job-title">B.A. in German Language and Literature</p>
               <p>Wuhan University @Wuhan, China</p>
             </div>
+          </div>
         </div>
-        <div class="column">
-            <h3 class="font-weight-light" >Skills</h3>
+
+        <div class="row">
+          <div class="column half">
+            <h3 class="font-weight-light">Skills</h3>
             <span class="line"></span>
             <div class="card">
               <h6>Python</h6>
@@ -137,19 +128,21 @@
               <h6>HTML5 & CSS3</h6>
               <div class="progress-bar" style="width:45%;">45%</div>
           </div>
-        </div>
-        <div class="column">
-          <h3 class="font-weight-light" >Languages</h3>
-          <span class="line"></span>
-          <div class="card">
-            <h6>English</h6>
-            <div class="progress-bar" style="width:80%;">Proficient in speaking and writing</div>
-            <h6>Mandarin</h6>
-            <div class="progress-bar" style="width:95%;">Native</div>
-            <h6>German</h6>
-            <div class="progress-bar" style="width:70%;">Proficient in speaking and writing</div>
-            <h6>Cantonese</h6>
-            <div class="progress-bar" style="width:60%;">Professional working proficiency</div>
+
+          <div class="column half">
+            <h3 class="font-weight-light">Languages</h3>
+            <span class="line"></span>
+            <div class="card">
+              <h6>English</h6>
+              <div class="progress-bar" style="width:80%;">Proficient in speaking and writing</div>
+              <h6>Mandarin</h6>
+              <div class="progress-bar" style="width:95%;">Native</div>
+              <h6>German</h6>
+              <div class="progress-bar" style="width:70%;">Proficient in speaking and writing</div>
+              <h6>Cantonese</h6>
+              <div class="progress-bar" style="width:60%;">Professional working proficiency</div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
