--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="assets/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
+    <script src="script.js" defer></script>
+  </head>
 
 <body>
     <header>
@@ -30,36 +31,51 @@
     </nav>
 
     <section id="about" class="section-container clearfix">
+      <div class="flex-container">
         <div class="column">
           <h3 class="font-weight-light">Who am I ?</h3>
           <span class="line"></span>
           <h5 class="mb-3">A Career Changer Transitioning To Web Developer / Data Engineer Based In London</h5>
           <p class="mt-20">
-            "At my previous job, I unearthed my fascination with tech. After completing a data science bootcamp and data engineering training, my passion for web development emerged through hands-on projects. Now, I'm pursuing a career as a web developer."
+            "At my previous job, I unearthed my fascination with tech. After completing a data science bootcamp and data engineering training,
+            my passion for web development emerged through hands-on projects. Now, I'm pursuing a career as
+            a web developer."
           </p>
         </div>
         <div class="column">
           <h3 class="font-weight-light">Personal Info</h3>
-            <ul class="person-info">
-              <li>
-                <span>Birthdate</span>
-                 : 13/02/1994
-              </li>
-              <li>
-                <span>Email</span>
-                 : hzh0608@hotmail.com
-              </li>
-              <li>
-                <span>Phone</span>
-                 : 07774 194634
-              </li>
-              <li>
-                <span>Address</span>
-                 : 37A Netherhall Gardens, NW3 5RL, London
-              </li>
-            </ul>
           <span class="line"></span>
+          <ul class="person-info">
+            <li>
+              <span>Birthdate:</span>
+              <p>13/02/1994</p>
+            </li>
+            <li>
+              <span>Email:</span>
+              <p>hzh0608@hotmail.com</p>
+            </li>
+            <li>
+              <span>Phone</span>
+              <p>07774 194634</p>
+            </li>
+            <li>
+              <span>Address</span>
+              <p>37A Netherhall Gardens, NW3 5RL, London</p>
+            </li>
+          </ul>
         </div>
+        <div class="column">
+          <h3 class="font-weight-light">Fun Fact</h3>
+          <span class="line"></span>
+          <h5 class="mb-3">Big Fan of Tennis And Coding / Tennis Event Organizer</h5>
+          <p class="mt-20">
+            "One of my main passions outside of work is tennis. I've always been drawn to the dynamic nature of the game, which challenges both the mind and body.
+            Currently, I am enrolled in a tennis beginner's course at Canada Water, where I practice my skills and engage in matches once a week. As an event organizer,
+            I spearheaded tennis sessions for the British Chinese Society twice in London, providing an avenue for members to interact and bond over shared interests.<br />
+            I’m also taking data-engineering and front-end engineering course at Codecademy, developing my competencies to building end-to-end Web Applications"
+          </p>
+        </div>
+      </div>
     </section>
 
     <section id="resume" class="section-container clearfix">
@@ -127,6 +143,7 @@
               <div class="progress-bar" style="width:55%;">55%</div>
               <h6>HTML5 & CSS3</h6>
               <div class="progress-bar" style="width:45%;">45%</div>
+            </div>
           </div>
 
           <div class="column half">
@@ -158,7 +175,7 @@
         <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/vikihuh/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://github.com/sailormoonvicky" target="_blank" class="github"><i class="fab fa-github"></i></a>
-    </div>
+      </div>
     </section>
 </body>
 </html>
