--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-content">
             <h1 class="header-subtitle">Hello, I am </h1>
             <h2 class="header-title">Vicky Zhenghan Hu</h2>
-            <p class="header-mono">Web Developer | Data Engineer</p>
+            <p class="header-mono">Software Developer</p>
         </div>
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
@@ -27,6 +27,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#resume">Resume</a>
+        <a href="#competency">Competency</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -35,36 +36,30 @@
         <div class="column">
           <h3 class="font-weight-light">Who am I ?</h3>
           <span class="line"></span>
-          <h5 class="mb-3">A Career Changer Transitioning To Web Developer / Data Engineer Based In London</h5>
+          <h5 class="mb-3">A London-Based Career Changer Transitioning To Software Developer</h5>
           <p class="mt-20">
-            "At my previous job, I unearthed my fascination with tech. After completing a data science bootcamp and data engineering training,
-            my passion for web development emerged through hands-on projects. Now, I'm pursuing a career as
-            a web developer."
+            What sparked my interest in Software Developer? <br>My journey began when I was working as a chatbots conversational analyst for Huawei in Germany.
+            While my primary role involved analytical reporting and optimizing conversational flow with data and user insights. It was during this period that I developed an innate passion for tech and data.
+            <br>Recognizing this newfound interest, I took proactive steps to enhance my expertise. After moving to London with my family, I enrolled in a Data Science bootcamp at Le Wagon. The comprehensive training
+            equipped me with profound technical skills in Python, SQL, and basic Machine Learning.
+            <br>After Le Wagon, I joined Sparta Global as a trainee data engineer. Here, I had the opportunity to to delve deep into the intricacies of real-world software development scenarios.
+            Among the projects I undertook, the one that stands out the most and truly ignited my passion for software development was the creation of a Pokémon Game Web Application. This wasn't just any project;
+            it required me to intricately request Pokémon data from an API, ensure that the data was stored effectively in MongoDB. I developed a dynamic Pokémon battle game and complemented it with a user-friendly GUI using Streamlit.
+            This project was an eye-opener for me. It made me realize the vast possibilities and the impactful changes that application development can bring about. Eager to build on this newfound passion,
+            I embarked on an independent learning journey through Codecademy, focusing on Front-End Engineering. Every module and every lesson further solidified my desire to delve deeper into the world of software development.
+            <br>Now, with a foundation built on both practical experience and structured learning, I am ardently pursuing a career as a software developer. I'm excited to harness the skills I've acquired and continue to create innovative solutions in the realm of software development.
           </p>
         </div>
-        <div class="column">
-          <h3 class="font-weight-light">Personal Info</h3>
-          <span class="line"></span>
-          <ul class="person-info">
-            <li>
-              <span>Birthdate:</span>
-              <p>13/02/1994</p>
-            </li>
-            <li>
-              <span>Email:</span>
-              <p>hzh0608@hotmail.com</p>
-            </li>
-          </ul>
-        </div>
+        <span class="line"></span>
+        <span class="line"></span>
         <div class="column">
           <h3 class="font-weight-light">Fun Fact</h3>
           <span class="line"></span>
-          <h5 class="mb-3">Big Fan of Tennis And Coding / Tennis Event Organizer</h5>
+          <h5 class="mb-3">Big Fan of Tennis / Tennis Event Organizer</h5>
           <p class="mt-20">
-            "One of my main passions outside of work is tennis. I've always been drawn to the dynamic nature of the game, which challenges both the mind and body.
+            One of my main passions outside of work is tennis. I've always been drawn to the dynamic nature of the game, which challenges both the mind and body.
             Currently, I am enrolled in a tennis beginner's course at Canada Water, where I practice my skills and engage in matches once a week. As an event organizer,
             I spearheaded tennis sessions for the British Chinese Society twice in London, providing an avenue for members to interact and bond over shared interests.<br />
-            I’m also taking data-engineering and front-end engineering course at Codecademy, developing my competencies to building end-to-end Web Applications"
           </p>
         </div>
       </div>
