added courses and contact form

--- a/index.html
+++ b/index.html
@@ -27,18 +27,35 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#resume">Resume</a>
+        <a href="#courses">Courses</a>
         <a href="#competency">Competency</a>
         <a href="#contact">Contact</a>
     </nav>
 
     <section id="about" class="section-container clearfix">
-      <div class="flex-container">
-        <div class="column">
+      <div class="about-container">
+        <div class="text-container">
           <h3 class="font-weight-light">Who am I ?</h3>
-          <span class="line"></span>
           <h5 class="mb-3">A London-Based Career Changer Transitioning To Software Developer</h5>
           <p class="mt-20">
-            What sparked my interest in Software Developer? <br>My journey began when I was working as a chatbots conversational analyst for Huawei in Germany.
+            In the heart of China, in a town named Zaoyang(枣阳), I began my story. My parents, both teachers,
+            shaped the start of my journey, surrounded by the buzz of school and the weight of exams. But when the
+            school bell rang, I dove into a world of video games, my little escape from routine.
+            <br>My hard work in school paid off when, at 18, I ranked 10th in science across Zaoyang in the National College Entrance Examination. This opened the door to Wuhan University,
+            where I chose to study German. The university was more than just classes; it was a window to the world. A special opportunity took me to Stuttgart, Germany.
+            This exchange semester was a canvas of unforgettable memories – from immersing myself in German and English films, hiking the enchanting trails of the Black Forest,
+            to dancing away with friends at the vibrant April Oktoberfest.
+            <br>Such was the allure of Europe that post my graduation from Wuhan, I took a leap of faith, landing at Heinrich-Heine University in Düsseldorf to dive deeper into German linguistics.
+            And as life has its surprises, it was in this city that I met the man I'd call my husband.
+            <br>Our journey took another turn after spending a couple of years in Düsseldorf. We packed our bags and headed to London.
+            Here, amidst the city's hustle and charm, I turned a new page, transforming from a linguist to embracing the binary world of software development.
+          </p>
+          <span class="line"></span>
+          <span class="line"></span>
+          <h3 class="font-weight-light">Why Software Development</h3>
+
+          <p class="mt-20">
+            My journey began when I was working as a chatbots conversational analyst for Huawei in Germany.
             While my primary role involved analytical reporting and optimizing conversational flow with data and user insights. It was during this period that I developed an innate passion for tech and data.
             <br>Recognizing this newfound interest, I took proactive steps to enhance my expertise. After moving to London with my family, I enrolled in a Data Science bootcamp at Le Wagon. The comprehensive training
             equipped me with profound technical skills in Python, SQL, and basic Machine Learning.
@@ -50,74 +67,125 @@
             <br>Now, with a foundation built on both practical experience and structured learning, I am ardently pursuing a career as a software developer. I'm excited to harness the skills I've acquired and continue to create innovative solutions in the realm of software development.
           </p>
         </div>
-        <span class="line"></span>
-        <span class="line"></span>
-        <div class="column">
-          <h3 class="font-weight-light">Fun Fact</h3>
+        <div class="map-container">
+          <img src="assets/imgs/zaoyang.png" alt="Zaoyang to Wuhan">
           <span class="line"></span>
-          <h5 class="mb-3">Big Fan of Tennis / Tennis Event Organizer</h5>
-          <p class="mt-20">
-            One of my main passions outside of work is tennis. I've always been drawn to the dynamic nature of the game, which challenges both the mind and body.
-            Currently, I am enrolled in a tennis beginner's course at Canada Water, where I practice my skills and engage in matches once a week. As an event organizer,
-            I spearheaded tennis sessions for the British Chinese Society twice in London, providing an avenue for members to interact and bond over shared interests.<br />
-          </p>
+          <img src="assets/imgs/dusseldorf.png" alt="Wuhan to Dusseldorf">
+          <span class="line"></span>
+          <img src="assets/imgs/london.png" alt="Dusseldorf to London">
+
         </div>
       </div>
     </section>
 
     <section id="resume" class="section-container clearfix">
-      <div class="box">
-        <div class="row">
-          <div class="column half">
-            <h3 class="font-weight-light">Experience</h3>
-            <span class="line"></span>
-            <div>
-              <h6 class="period">04/2023 - 06/2023</h6>
-              <p class="job-title">Trainee Data Engineer  @Sparta Global London</p>
-              <p>
-                Completed intensive training encompassing AGILE & SCRUM methodologies,
-                Python programming, SQL Server, Docker, MongoDB,Test-Driven Development (TDD),
-                Pyspark, Databricks, ETL pipeline design, and cloud technologies including GCP (Google Cloud Platform) and AWS (Amazon Web Services).
-              </p>
-            </div>
-            <div>
-              <h6 class="period">04/2021 - 07/2022</h6>
-              <p class="job-title">Chatbots Conversational Analyst  @Huawei Dusseldorf</p>
-              <ul>
-                <li>
-                  <p>Conducted thorough data analysis to identify opportunities for enhancing conversational flows,
-                    utilizing user insights to drive optimization strategies.</p>
-                </li>
-                <li>
-                  <p>Collaborated closely with stakeholders from various departments to implement
-                    improvements in conversational interfaces.</p>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="column half">
-            <h3 class="font-weight-light">Education</h3>
-            <span class="line"></span>
-            <div>
-              <h6 class="period">10/2022 - 12/2023</h6>
-              <p class="job-title">Data Science</p>
-              <p>Le Wagon @London, UK</p>
-            </div>
-            <div>
-              <h6 class="period">04/2017 - 02/2021</h6>
-              <p class="job-title">M.A. in Germanic Literatures and Linguistics</p>
-              <p>Heinrich Heine University Dusseldorf @Dusseldorf, Germany</p>
-            </div>
-            <div>
-              <h6 class="period">09/2012 - 06/2016</h6>
-              <p class="job-title">B.A. in German Language and Literature</p>
-              <p>Wuhan University @Wuhan, China</p>
-            </div>
-          </div>
+      <div class="resume-container">
+        <h3 class="font-weight-light">Experience</h3>
+        <span class="line"></span>
+        <div>
+          <h6 class="period">04/2023 - 06/2023</h6>
+          <p class="job-title">Trainee Data Engineer  @Sparta Global London</p>
+          <p>
+            Completed intensive training encompassing AGILE & SCRUM methodologies,
+            Python programming, SQL Server, Docker, MongoDB,Test-Driven Development (TDD),
+            Pyspark, Databricks, ETL pipeline design, and cloud technologies including GCP (Google Cloud Platform) and AWS (Amazon Web Services).
+          </p>
         </div>
+        <div>
+          <h6 class="period">04/2021 - 07/2022</h6>
+          <p class="job-title">Chatbots Conversational Analyst  @Huawei Dusseldorf</p>
+          <ul>
+            <li>
+              <p>Conducted thorough data analysis to identify opportunities for enhancing conversational flows,
+                utilizing user insights to drive optimization strategies.</p>
+            </li>
+            <li>
+              <p>Collaborated closely with stakeholders from various departments to implement
+                improvements in conversational interfaces.</p>
+            </li>
+          </ul>
+        </div>
+      <span class="line"></span>
 
-        <div class="row">
+        <h3 class="font-weight-light">Education</h3>
+      <span class="line"></span>
+      <div>
+        <h6 class="period">10/2022 - 12/2023</h6>
+        <p class="job-title">Data Science</p>
+        <p>Le Wagon @London, UK</p>
+      </div>
+      <div>
+        <h6 class="period">04/2017 - 02/2021</h6>
+        <p class="job-title">M.A. in Germanic Literatures and Linguistics</p>
+        <p>Heinrich Heine University Dusseldorf @Dusseldorf, Germany</p>
+      </div>
+      <div>
+        <h6 class="period">09/2012 - 06/2016</h6>
+        <p class="job-title">B.A. in German Language and Literature</p>
+        <p>Wuhan University @Wuhan, China</p>
+      </div>
+      </div>
+    </section>
+
+    <section id="courses" class="section-container clearfix">
+      <h3 class="font-weight-light">Courses</h3>
+      <div class="course-table">
+        <table>
+          <thead>
+            <tr>
+              <th>Institut</th>
+              <th>Description</th>
+              <th>Date</th>
+              <th>Certificate</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Codecademy</th>
+              <td>Learn JavaScript Course</td>
+              <td>08/2023</td>
+              <td>
+                <a href="https://www.codecademy.com/profiles/sailormoonvicky/certificates/705dcb15de0da4dd9d9fc4f3274b430e" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+              </td>
+            </tr>
+            <tr>
+              <td>Databricks</th>
+              <td>Databricks Lakehouse Fundamentals</td>
+              <td>05/2023</td>
+              <td>
+                <a href="https://credentials.databricks.com/a4f12d11-ce69-4e2a-b3d7-d1285a7ba2a4#gs.7mnsc2" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+              </td>
+            </tr>
+            <tr>
+              <td>Codecademy</th>
+              <td>Learn SQL</td>
+              <td>02/2023</td>
+              <td>
+                <a href="https://www.codecademy.com/profiles/sailormoonvicky/certificates/042a4e5884e3eb6ea1f2a12be6abb851" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+              </td>
+            </tr>
+            <tr>
+              <td>Codecademy</th>
+              <td>Learn Python 3</td>
+              <td>02/2023</td>
+              <td>
+                <a href="https://www.codecademy.com/profiles/sailormoonvicky/certificates/6c152bd262967f8c941c9707ed636bda" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+              </td>
+            </tr>
+            <tr>
+              <td>Le Wagon</th>
+              <td>Data Science</td>
+              <td>12/2022</td>
+              <td>
+                <a href="assets/imgs/le_wagon.pdf" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <section id="competency" class="section-container clearfix">
           <div class="column half">
             <h3 class="font-weight-light">Skills</h3>
             <span class="line"></span>
@@ -127,9 +195,9 @@
               <h6>SQL</h6>
               <div class="progress-bar" style="width:65%;">65%</div>
               <h6>JavaScript</h6>
-              <div class="progress-bar" style="width:55%;">55%</div>
+              <div class="progress-bar" style="width:55%;">50%</div>
               <h6>HTML5 & CSS3</h6>
-              <div class="progress-bar" style="width:45%;">45%</div>
+              <div class="progress-bar" style="width:45%;">30%</div>
             </div>
           </div>
 
@@ -147,21 +215,35 @@
               <div class="progress-bar" style="width:60%;">Professional working proficiency</div>
             </div>
           </div>
-        </div>
-      </div>
     </section>
 
     <section id="contact" class="section-container clearfix">
-      <i class="fa-solid fa-phone"></i>
-      <p>Phone Number: 07774 194634</p>
-      <i class="fa-solid fa-location-dot"></i>
-      <p>Address: 37A Netherhall Gardens, London</p>
-      <i class="fa-regular fa-envelope"></i>
-      <p>Email: hzh0608@hotmail.com</p>
-      <div class="social-icons">
-        <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/vikihuh/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/sailormoonvicky" target="_blank" class="github"><i class="fab fa-github"></i></a>
+      <div class="contact-info">
+        <div class="connect">
+          <h3 class="font-weight-light">Contact Info</h3>
+          <i class="fa-solid fa-phone"></i>
+          <p>Phone Number: 07774 194634</p>
+          <i class="fa-regular fa-envelope"></i>
+          <p>Email: hzh0608@hotmail.com</p>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/vikihuh/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/sailormoonvicky" target="_blank" class="github"><i class="fab fa-github"></i></a>
+          </div>
+        </div>
+        <div class="contact-me">
+          <form onsubmit="sendEmail(); reset(); return false">
+            <h3 class="font-weight-light">GET IN TOUCH</h3>
+            <input type="text" id="name" placeholder="Your Name" required>
+            <input type="text" id="email" placeholder="Email" required>
+            <textarea id="message" cols="message" rows="5" placeholder="Send Me Message"></textarea>
+            <button type="submit">Send</button>
+          </form>
+        </div>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+        <script>
+
+        </script>
       </div>
     </section>
 </body>
