--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <p class="header-mono">Software Developer</p>
         </div>
         <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/vikihuh/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/zhenghan-hu/" target="_blank" class="facebook"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/sailormoonvicky" target="_blank" class="github"><i class="fab fa-github"></i></a>
         </div>
     </header>
@@ -200,7 +199,6 @@
               <div class="progress-bar" style="width:45%;">30%</div>
             </div>
           </div>
-
           <div class="column half">
             <h3 class="font-weight-light">Languages</h3>
             <span class="line"></span>
@@ -220,15 +218,15 @@
     <section id="contact" class="section-container clearfix">
       <div class="contact-info">
         <div class="connect">
-          <h3 class="font-weight-light">Contact Info</h3>
-          <i class="fa-solid fa-phone"></i>
-          <p>Phone Number: 07774 194634</p>
-          <i class="fa-regular fa-envelope"></i>
-          <p>Email: hzh0608@hotmail.com</p>
+          <h3 class="font-weight-light">FIND ME IN</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100008286013878" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/vikihuh/" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/zhenghan-hu/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/sailormoonvicky" target="_blank" class="github"><i class="fab fa-github"></i></a>
+          </div>
+          <div class="codecademy-container">
+            <a href="https://www.codecademy.com/profiles/sailormoonvicky" target="_blank" class="codecademy">
+              <img src="assets/imgs/codecademy.png" alt="codecademy portfolio" id="codecademy">
+            </a>
           </div>
         </div>
         <div class="contact-me">
@@ -246,5 +244,11 @@
         </script>
       </div>
     </section>
+    <footer class="footer">
+      <div>
+        <p class="copyright"><i class="fa-solid fa-copyright"></i>SailorMoonVicky_2023</p>
+      </div>
+
+    </footer>
 </body>
 </html>
