added favicon and footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vicky Zhenghan Hu</title>
     <link rel="stylesheet" href="assets/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="assets/imgs/logo.png">
     <script src="script.js" defer></script>
   </head>
 
@@ -246,7 +247,7 @@
     </section>
     <footer class="footer">
       <div>
-        <p class="copyright"><i class="fa-solid fa-copyright"></i>SailorMoonVicky_2023</p>
+        <p class="copyright"><i class="fa-regular fa-copyright"></i>SailorMoonVicky_2023</p>
       </div>
 
     </footer>
