changed the path of certificates as pdf file

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             school bell rang, I dove into a world of video games, my little escape from routine.
             <br>My hard work in school paid off when, at 18, I ranked 10th in science across Zaoyang in the National College Entrance Examination. This opened the door to Wuhan University,
             where I chose to study German. The university was more than just classes; it was a window to the world. A special opportunity took me to Stuttgart, Germany.
-            This exchange semester was a canvas of unforgettable memories – from immersing myself in German and English films, hiking the enchanting trails of the Black Forest,
-            to dancing away with friends at the vibrant April Oktoberfest.
+            This exchange semester was a canvas of unforgettable memories – from immersing myself in German and English films, hiking in the Black Forest,
+            to drinking beer with friends at the Stuttgart Spring Festival.
             <br>Such was the allure of Europe that post my graduation from Wuhan, I took a leap of faith, landing at Heinrich-Heine University in Düsseldorf to dive deeper into German linguistics.
             And as life has its surprises, it was in this city that I met the man I'd call my husband.
             <br>Our journey took another turn after spending a couple of years in Düsseldorf. We packed our bags and headed to London.
@@ -70,7 +70,7 @@
         <div class="map-container">
           <img src="assets/imgs/zaoyang.png" alt="Zaoyang to Wuhan">
           <span class="line"></span>
-          <img src="assets/imgs/dusseldorf.png" alt="Wuhan to Dusseldorf">
+          <img src="assets/imgs/dusseldorf.png" alt="Wuhan to Dusseldorf" width="100%">
           <span class="line"></span>
           <img src="assets/imgs/london.png" alt="Dusseldorf to London">
 
@@ -145,7 +145,7 @@
               <td>Learn JavaScript Course</td>
               <td>08/2023</td>
               <td>
-                <a href="https://www.codecademy.com/profiles/sailormoonvicky/certificates/705dcb15de0da4dd9d9fc4f3274b430e" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+                <a href="assets/certificates/ JS_Codecademy.pdf" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
               </td>
             </tr>
             <tr>
@@ -161,7 +161,7 @@
               <td>Learn SQL</td>
               <td>02/2023</td>
               <td>
-                <a href="https://www.codecademy.com/profiles/sailormoonvicky/certificates/042a4e5884e3eb6ea1f2a12be6abb851" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+                <a href="assets/certificates/Learn SQL _ Codecademy.pdf" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
               </td>
             </tr>
             <tr>
@@ -169,7 +169,7 @@
               <td>Learn Python 3</td>
               <td>02/2023</td>
               <td>
-                <a href="https://www.codecademy.com/profiles/sailormoonvicky/certificates/6c152bd262967f8c941c9707ed636bda" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+                <a href="assets/certificates/python_Codecademy.pdf" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
               </td>
             </tr>
             <tr>
@@ -177,7 +177,7 @@
               <td>Data Science</td>
               <td>12/2022</td>
               <td>
-                <a href="assets/imgs/le_wagon.pdf" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
+                <a href="assets/certificates/diploma_le_wagon.pdf" target="_blank">Show credential<i class="fa-solid fa-link"></i></a>
               </td>
             </tr>
           </tbody>
