--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
 <body>
-    <header>
+    <header id="home">
         <div class="header-content">
             <h1 class="header-subtitle">Hello, I am </h1>
             <h2 class="header-title">Vicky Zhenghan Hu</h2>
