modified my story

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             In the heart of China, in a town named Zaoyang(枣阳), I began my story. My parents, both teachers,
             shaped the start of my journey, surrounded by the buzz of school and the weight of exams. But when the
             school bell rang, I dove into a world of video games, my little escape from routine.
-            <br>My hard work in school paid off when, at 18, I ranked 10th in science across Zaoyang in the National College Entrance Examination. This opened the door to Wuhan University,
-            where I chose to study German. The university was more than just classes; it was a window to the world. A special opportunity took me to Stuttgart, Germany.
+            <br>My dedication to academics culminated at age 18 when I achieved a top-ten ranking in science in Zaoyang's National College Entrance Examination.
+            This success led me to Wuhan University, where my passion for exploring diverse cultures inspired me to study German. Growing up in a small town,
+            my curiosity about the world beyond has always been a driving force in my journey. The university was more than just classes; it was a window to the world. A special opportunity took me to Stuttgart, Germany.
             This exchange semester was a canvas of unforgettable memories – from immersing myself in German and English films, hiking in the Black Forest,
             to drinking beer with friends at the Stuttgart Spring Festival.
             <br>Such was the allure of Europe that post my graduation from Wuhan, I took a leap of faith, landing at Heinrich-Heine University in Düsseldorf to dive deeper into German linguistics.
